# engine

./: .gitignore  CMakeLists.txt  CR.cpp  CR.hpp  Camera.cpp  Camera.hpp  Collider.hpp  Collision.cpp  Collision.hpp  Collusion.cpp  Collusion.hpp  Constraint.cpp  Constraint.hpp  ImpulseSolver.cpp  ImpulseSolver.hpp  Math.cpp  Math.hpp  Motion.cpp  Motion.hpp  Particle.hpp  PhysicsObject.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp  Vector.cpp  Vector.hpp  World.cpp  World.hpp  constraint.cpp  constraint.hpp  main.cpp
.github/workflows/: cmake.yml
imgui/: CMakeLists.txt
tests/: CMakeLists.txt  collision.cpp  motion.cpp
